# jet

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: app.rs  events.rs  input_system.rs  lib.rs  main.rs  performance.rs  ui.rs
src/buffer/: mod.rs
src/config/: mod.rs
src/handlers/: app_state.rs  keyboard.rs  mod.rs  mouse.rs
src/input/: coordinates.rs  mod.rs  scroll.rs
src/plugins/: mod.rs
src/widgets/: cursor.rs  editor.rs  mod.rs  modal.rs  status_bar.rs  toast.rs
tests/: app_tests.rs  buffer_tests.rs  input_tests.rs  integration_tests.rs  smoke_tests.rs  status_bar_tests.rs  widget_tests.rs
