[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.12"
futures = "0.3.31"
dirs = "5.0.1"
clipboard = "0.5.0"
