[package]
name = "jet"
version = "0.1.1"
edition = "2021"
description = "A fast, terminal-based text editor built with Rust and Ratatui"
authors = ["MrF0o"]
license = "MIT"
repository = "https://github.com/MrF0o/editor"
keywords = ["editor", "terminal", "text-editor", "tui", "jet"]
categories = ["command-line-utilities", "text-editors"]
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.12"
futures = "0.3.31"
dirs = "5.0.1"
clipboard = "0.5.0"
